[package]
name = "os"
version = "0.1.0"
authors = ["arrayJY <ji957455952@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic="abort"
[profile.release]
panic="abort"

[dependencies]
bootloader = "0.9.14"

[package.metadata.bootimage]
build-command = ["xbuild"]