[package]
name = "os"
version = "0.1.0"
authors = ["arrayJY <ji957455952@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic="abort"
[profile.release]
panic="abort"

[dependencies]
bootloader = "0.9.14"
x86_64 = "0.13.2"
uart_16550 = "0.2.0"
volatile = "0.4.3"
spin = "0.7.1"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"

[dependencies.lazy_static]
lazy_static = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
build-command = ["xbuild"]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 100 

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false